--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
+    "cote": "^1.0.3",
     "cross-env": "^7.0.3",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
@@ -18,9 +19,11 @@
     "express-validator": "^6.12.1",
     "http-errors": "~1.6.3",
     "i18n": "^0.13.3",
+    "jimp": "^0.16.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.5",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "multer": "^1.4.3"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
